Remove PolygonStipple related code and its control from the GUI. Add GUI control for hardware lighting instead.

--- a/Resource.rc
+++ b/Resource.rc
@@ -119,8 +119,7 @@ BEGIN
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,17,154,171,10
     COMBOBOX        IDC_TEXTUREBPP,87,118,107,75,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Texture Bit Depth:",IDC_STATIC,15,120,60,8
-    CONTROL         "Enabled Dithered Alpha Testing",IDC_DITHEREDALPHATEST,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,16,81,116,10
+    CONTROL         "Enabled Hardware Lighting",IDC_HWLIGHT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,82,101,10
 END
 
 IDD_MICROCODEDLG DIALOGEX 0, 0, 384, 129
