Remove asm code from 3dMath

--- a/GLideN64.vcproj
+++ b/GLideN64.vcproj
@@ -274,6 +274,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\3DMath.cpp"
+				>
+			</File>
+			<File
 				RelativePath="Combiner.cpp"
 				>
 			</File>
