Refactor: replace define WIN32 by WIN32_ASM since it is used for MSVS style asm code only.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,10 +71,9 @@ endif(UNIX)
 if(WIN32)
   list(APPEND GLideN64_SOURCES ${GLideN64_SOURCES_WIN})
   add_definitions( 
-    -DWIN32
-    -DWINDOWS
+    -D_WINDOWS
     -D__WIN32__
-    -D_WIN32
+    -D_WIN32_
     -D_CRT_SECURE_NO_WARNINGS
     -D__MSC__
   )
