Add Log.h to MSVS project.

--- a/GLideN64.vcxproj
+++ b/GLideN64.vcxproj
@@ -348,6 +348,7 @@
     <ClInclude Include="glext.h" />
     <ClInclude Include="GLideN64.h" />
     <ClInclude Include="gSP.h" />
+    <ClInclude Include="Log.h" />
     <ClInclude Include="mupenplus\GLideN64_mupenplus.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
